--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   --additional-background-color: #f5f4fa;
   --hero-background-color: #c4c4c4;
   --portfolio-card-background: rgba(33, 150, 243, 0.9);
+  --backdrop-backgroun: rgba(0, 0, 0, 0.2);
 
   /* Анимация */
   --primary-duration: 250ms;
@@ -605,6 +606,62 @@ img {
 .footer-link:hover,
 .footer-link:focus {
   color: var(--primary-accent-color);
+}
+
+/* Бэкдроп */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--backdrop-backgroun);
+
+  visibility: visible;
+  opacity: 1;
+  transition: opacity var(--primary-duration) var(--primery-timing-function);
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform var(--primary-duration) var(--primery-timing-function);
+
+  min-width: 528px;
+  min-height: 581px;
+  padding: 8px;
+
+  background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px;
+  background-color: var(--primary-background-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 /* Портфолио */
